--- a/project/scc.css
+++ b/project/scc.css
@@ -45,12 +45,12 @@ body {
 #myBtn:hover {
   background-color: green;
 }
-.dropdown {
+#dropdown {
     float: left;
     overflow: hidden;
 }
 
-.dropdown .dropbtn {
+#dropdown .dropbtn {
     font-size: 16px;    
     border: none;
     outline: none;
@@ -61,11 +61,11 @@ body {
     margin: 0;
 }
 
-.navbar a:hover, .dropdown:hover .dropbtn {
+#navbar a:hover, .dropdown:hover .dropbtn {
     background-color: red;
 }
 
-.dropdown-content {
+#dropdown-content {
     display: none;
     position: absolute;
     background-color: #f9f9f9;
@@ -74,7 +74,7 @@ body {
     z-index: 1;
 }
 
-.dropdown-content a {
+#dropdown-content a {
     float: none;
     color: black;
     padding: 12px 16px;
@@ -83,10 +83,10 @@ body {
     text-align: left;
 }
 
-.dropdown-content a:hover {
+#dropdown-content a:hover {
     background-color: #ddd;
 }
 
-.dropdown:hover .dropdown-content {
+#dropdown:hover .dropdown-content {
     display: block;
 }
