--- a/project/scc.css
+++ b/project/scc.css
@@ -43,7 +43,7 @@ body {
   border-radius: 40px;
 }
 #myBtn:hover {
-  background-color: green;
+  background-color: pink;
 }
 #dropdown {
     float: left;
@@ -89,4 +89,23 @@ body {
 
 #dropdown:hover .dropdown-content {
     display: block;
+}
+table {
+    font-family: arial, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+}
+
+td, th {
+    border: 1px solid #dddddd;
+    text-align: left;
+    padding: 8px;
+}
+
+tr:nth-child(even) {
+    background-color: #dddddd;
+}
+table, th, td {
+    border: 1px solid black;
+    border-collapse: collapse;
 }
